navbar: fix z-index for main menu

--- a/src/main.scss
+++ b/src/main.scss
@@ -84,6 +84,13 @@ body {
     display: none !important;
 }
 
+@media only screen and (max-width: 768px) {
+    body {
+        /* offset for main menu button and some status bar */
+        padding-bottom: calc(1rem + 2 * var(--space-xs));
+    }
+}
+
 @import "theme";
 @import "typography/base";
 @import "layout/base";
